--- a/assets/css/Footer-Clean.css
+++ b/assets/css/Footer-Clean.css
@@ -30,7 +30,7 @@
 }
 
 .footer-clean .item.social {
-  text-align:right;
+  text-align:center;
 }
 
 @media (max-width:767px) {
@@ -42,7 +42,7 @@
 
 @media (max-width: 768px) {
   .footer-clean .item.social {
-    text-align:center;
+    /*text-align:center;*/
   }
 }
 
